fix background on mobile

--- a/public/scss/_defaults.scss
+++ b/public/scss/_defaults.scss
@@ -49,6 +49,10 @@ body {
     overflow-y: auto;
     height: auto;
     min-height: 100%;
+
+    background-size: contain;
+    background-position: center;
+    background-repeat: round;
   }
   body {
     // max-width: 400px;
